--- a/canvasHtml.html
+++ b/canvasHtml.html
@@ -2,20 +2,7 @@
 <html>
     <head>
         <title>Canvas</title>
-        <style>
-            h1 {
-                color:green;
-            }
-            ul li {
-                color:#795da3;
-            }
-            ol li {
-                color: #df5000;
-            }
-            h3 {
-                color: #b0e36e;
-            }
-        </style>
+        <link rel="styleSheet" href="./canvasStyle.css" >
     </head>
     <body>
         <h1>Canvas</h1>
@@ -32,7 +19,7 @@
                 <li>beginPath()开始绘制</li>
                 <li>moveTo(x,y)移动笔触</li>
                 <li>lineTo(x,y)绘制直线</li>
-                <li>fill()填充</li>
+                <li>fill()填充 ---还接受参数['nonzero','evenodd']</li>
                 <li>storke()描边</li>
                 <li>closePath()闭合路径</li>
             </ul>
@@ -44,8 +31,7 @@
                 <li>quadrativCurveTo(cp1x, cp1y, x, y)二次贝塞尔曲线</li>
                 <li>bezierCuerveTo(cp1x, cp1y, cp2x, cp2y, x, y)三次贝塞尔曲线</li>
             </ol>
-            <h3>线条样式</h3>
-            <h3>canvasGradient对象</h3>
+            <h3>线条样式、canvasGradient对象</h3>
             <ul>
                 <li>lineWidth = value</li>
                 <li>lineCap = ['butt'|'round'|'square'](边宽半径的一半)</li>
@@ -60,124 +46,44 @@
                 <li>createLinearGradient(x1,y1,x2,y2)渐变线</li>
                 <li>createRadialGradient(x1,y1,r1,x2,y2,r2)渐变圆</li>
                 <li>gradient.addColorStop(1,'black')</li>
+                <li>createPattern(image,type) ---type=['repeat','repeat-x','repeat-y','no-repeat']</li>
+            </ul>
+            <ol>
+                <li>shadowOffsetX()</li>
+                <li>shadowOffsetY</li>
+                <li>shadowColor(阴影颜色)</li>
+                <li>shadowBlur = float (设定阴影的模糊程度)</li>
+            </ol>
+            <h2>canvas的保存与复原（目的是为了更好地使用重复的样式）</h2>
+            <h3>canvas的状态存储、移动及变形</h3>
+            <ul>
+                <li>save()---保存状态</li>
+                <li>restore()---复原状态</li>
+                <li>translate(x, y)---移动</li>
+                <li>rotate(angle)---旋转(弧度单位)</li>
+                <li>scale(xS,yS)---缩放比例大于1放大，小于1为缩小</li>
+                <li>transform(m11, m12, m21, m22, dx, dy)</li>
+                <li>setTransform()</li>
+                <li>resetTransform()</li>
             </ul>
             <h3>new Path2D() 记录路径</h3>
         </div>
         <div>
-            <button onclick="addRect()">画一个矩形</button>
+            <button onclick="addRect()">矩形</button>
             <button onclick="clearRect()">clear region</button>
             <button onclick="addLineGraph()">菱形</button>
             <button onclick="addArc()">笑脸</button>
             <button onclick="bezierGraph()">通过贝塞尔曲线来绘制</button>
             <button onclick="bezierGraphRight()">通过贝塞尔曲线来绘制</button>
             <button onclick="lineStyleTest()">直线的相关属性样式</button>
+            <button onclick="addGradientRadius()">渐变圆</button>
+            <button onclick="addText()">文字</button>
+            <button onclick="handleCanvasStatus()">canvas状态及移动变形</button>
+            <!-- <button onclick="getTransform()">变形</button> -->
         </div>
         <canvas id="canvas" width="500" height="500">该浏览器版本不支持canvas</canvas>
-        <script>
-
-            function getCanvasNode(){
-                let canvas = document.querySelector("#canvas");
-                let ctx = canvas.getContext('2d');
-                return ctx;
-            }
-
-
-            function addRect(){
-                const ctx = getCanvasNode();
-                ctx.fillStyle = 'red';
-                ctx.fillRect(10,10,150,100);
-
-                ctx.fillStyle = 'pink';
-                ctx.fillRect(50,50,150,100);
-
-                ctx.strokeRect(40,60,100,100);
-            }
-
-            function clearRect(){
-                let ctx = getCanvasNode();
-                ctx.clearRect(40,40,50,100);
-            }
-
-            function addLineGraph(){
-                const ctx = getCanvasNode();
-                ctx.beginPath();
-                ctx.moveTo(200,200);
-                ctx.lineTo(230,230);
-                // ctx.lineCap = 'round';
-                ctx.lineTo(200,260);
-                ctx.lineTo(170,230);
-                ctx.fillStyle="blue";
-                ctx.fill();
-                // ctx.stroke();
-            }
-
-            function addArc(){
-                const arcUnit = Math.PI / 180;
-                const canvas = getCanvasNode();
-                canvas.beginPath()
-                canvas.arc(300,300,40,0, Math.PI * 2, true);
-                // canvas.stroke();
-                // canvas.fillStyle = 'pink';
-                canvas.fillStyle = '#6ebade';
-                canvas.fill();
-                canvas.moveTo(280,280);
-                canvas.arc(280,280,5, 0, arcUnit * 360, false);
-                canvas.stroke();
-                canvas.moveTo(320,280);
-                canvas.arc(320,280,5,0, arcUnit * 360, false);
-                canvas.stroke();
-                canvas.moveTo(300,320);
-                canvas.beginPath();
-                canvas.arc(300,320,10,0,Math.PI, false);
-                canvas.stroke();
-            }
-
-            function bezierGraph(){
-                const graphNode = getCanvasNode();
-                graphNode.beginPath();
-                graphNode.moveTo(300,300);
-                graphNode.quadraticCurveTo(350,350,380,400);
-                // graphNode.strokeStyle = 'blue';
-                // graphNode.stroke();
-                graphNode.quadraticCurveTo(320, 360, 350,400);
-                // graphNode.strokeStyle = 'red';
-                // graphNode.stroke();
-                graphNode.bezierCurveTo(280,400,320, 360,240,300);
-                graphNode.strokeStyle = '#000000';
-                // graphNode.rect(260, 260, 50, 60); //绘制矩形
-                graphNode.stroke()
-            }
-            
-            function bezierGraphRight(){
-                const graphNode = getCanvasNode();
-                graphNode.beginPath();
-                graphNode.moveTo(270,330);
-                graphNode.quadraticCurveTo(230, 360, 200,420);
-                graphNode.quadraticCurveTo(240, 380, 250, 380);
-                graphNode.bezierCurveTo(250, 480, 310, 350, 360, 280);
-                graphNode.strokeStyle = '#000000';
-                graphNode.stroke()
-            }
-        
-            function lineStyleTest(){
-                const canvas = getCanvasNode();
-                canvas.moveTo(20,20);
-                canvas.lineTo(20,200);
-                canvas.lineWidth = 20; //线条宽度
-                // canvas.lineCap = 'round'; //线条末端样式
-                canvas.strokeStyle = 'rgba(234,25,168)'; //填充颜色
-                canvas.globalAlpha = 0.2;    //透明度
-                // canvas.strokeStyle = 'rgba(234,25,168,0.4)';
-                canvas.lineJoin = 'round';
-                canvas.setLineDash([8,1])
-                canvas.lineTo(100,220);
-                const gradient = canvas.createLinearGradient(20,20,20,200);
-                gradient.addColorStop(0.1,'black');
-                gradient.addColorStop(0.2,'#452367');
-                gradient.addColorStop(0.5,'#678956');
-                canvas.stroke();
-            }
-        </script>
+        <canvas id="canvas2" width="500" height="500">no canvas</canvas>
+        <script src="./handleCanvas.js"></script>
     </body>
 
 </html>
