演示文档地球转动模型

--- a/canvasHtml.html
+++ b/canvasHtml.html
@@ -92,6 +92,7 @@
         <canvas id="canvas" width="500" height="500">该浏览器版本不支持canvas</canvas>
         <canvas id="canvas2" width="500" height="500">no canvas</canvas>
         <script src="./handleCanvas.js"></script>
+        <!-- <script src="./drawSun.js"></script> -->
     </body>
 
 </html>
